# eframe_egui_CRUD

./: Cargo.toml  README.md  check.sh
.github/workflows/: rust.yml
src/: app.rs  main.rs
