[package]
name = "eframe_egui_CRUD"
version = "0.1.0"
authors = ["the-ryan-1"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
rfd = "0.10"
egui_extras = { version = "0.20.0", features = ["image"]}
image = { version = "0.24",default-features = false, features = ["png"] }
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
csv = { version = "1.1.6"}
validator = { version = "0.15", features = ["derive"] }


# Reqwest json payloads seems to only be supported with async/ tokio
http = { version = "0.2.8" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
